--- a/manifest.json
+++ b/manifest.json
@@ -5,7 +5,7 @@
   "description": "Modding framework for Snap!",
   "content_scripts": [
     {
-      "matches": ["*://snap.berkeley.edu/snap/snap.html*"],
+      "matches": ["*://snap.berkeley.edu/snap/snap.html*", "*://mojavesoft.net/ide/snap.html*", "*://mojavesoft.org/ide/snap.html*"],
       "js": [ "index.js" ],
       "world": "MAIN"
     }
